testdata/baselines/reference/submodule/conformance/bundlerImportTsExtensions(allowimportingtsextensions=false,noemit=false).errors.txt
/project/e(1,1): error TS1434: Unexpected keyword or identifier.
/project/e(1,1): error TS2304: Cannot find name 'WOMP'.
/project/e(1,6): error TS1434: Unexpected keyword or identifier.
/project/e(1,6): error TS2304: Cannot find name 'WOMP'.
/project/e(1,11): error TS1434: Unexpected keyword or identifier.
/project/e(1,11): error TS2304: Cannot find name 'BINARY'.
/project/e(1,18): error TS2304: Cannot find name 'DATA'.
/project/e.txt(1,1): error TS1434: Unexpected keyword or identifier.
/project/e.txt(1,1): error TS2304: Cannot find name 'The'.
/project/e.txt(1,5): error TS1434: Unexpected keyword or identifier.
/project/e.txt(1,5): error TS2304: Cannot find name 'letter'.
/project/e.txt(1,12): error TS1434: Unexpected keyword or identifier.
/project/e.txt(1,12): error TS2304: Cannot find name 'e'.
/project/e.txt(1,14): error TS2304: Cannot find name 'is'.
/project/e.txt(1,14): error TS1228: A type predicate is only allowed in return type position for functions and methods.
/project/e.txt(1,21): error TS1005: '(' expected.
/project/e.txt(1,21): error TS2304: Cannot find name 'elephant'.
/project/e.txt(2,1): error TS1005: ';' expected.
/project/e.txt(2,1): error TS2304: Cannot find name 'This'.
/project/e.txt(2,6): error TS1005: ';' expected.
/project/e.txt(2,6): error TS2304: Cannot find name 'poem'.
/project/e.txt(2,11): error TS1005: ')' expected.
/project/e.txt(2,11): error TS2304: Cannot find name 'is'.
/project/e.txt(2,11): error TS1228: A type predicate is only allowed in return type position for functions and methods.
/project/e.txt(2,14): error TS1434: Unexpected keyword or identifier.
/project/e.txt(2,14): error TS2304: Cannot find name 'not'.
/project/e.txt(2,18): error TS1434: Unexpected keyword or identifier.
/project/e.txt(2,18): error TS2304: Cannot find name 'about'.
/project/e.txt(2,24): error TS2304: Cannot find name 'elephants'.
/project/e.txt(3,1): error TS1434: Unexpected keyword or identifier.
/project/e.txt(3,1): error TS2304: Cannot find name 'It'.
/project/e.txt(3,4): error TS2304: Cannot find name 'is'.
/project/e.txt(3,4): error TS1228: A type predicate is only allowed in return type position for functions and methods.
/project/e.txt(3,7): error TS1434: Unexpected keyword or identifier.
/project/e.txt(3,7): error TS2304: Cannot find name 'about'.
/project/e.txt(3,13): error TS1434: Unexpected keyword or identifier.
/project/e.txt(3,13): error TS2304: Cannot find name 'the'.
/project/e.txt(3,17): error TS1434: Unexpected keyword or identifier.
/project/e.txt(3,17): error TS2304: Cannot find name 'letter'.
/project/e.txt(3,24): error TS2304: Cannot find name 'e'.
/project/e.txt(4,3): error TS2304: Cannot find name 'Authored'.
/project/e.txt(4,12): error TS1005: ';' expected.
/project/e.txt(4,12): error TS2304: Cannot find name 'by'.
/project/e.txt(4,15): error TS1434: Unexpected keyword or identifier.
/project/e.txt(4,15): error TS2304: Cannot find name 'GitHub'.
/project/e.txt(4,22): error TS2304: Cannot find name 'Copilot'.
/project/e.txt(4,22): error TS2695: Left side of comma operator is unused and has no side effects.
/project/e.txt(4,31): error TS2304: Cannot find name 'Nov'.
/project/e.txt(4,35): error TS1005: ';' expected.


==== /project/a.ts (0 errors) ====
    export {};
    
==== /project/b.ts (0 errors) ====
    export {};
    
==== /project/b.js (0 errors) ====
    export {};
    
==== /project/b.d.ts (0 errors) ====
    export {};
    
==== /project/c.ts (0 errors) ====
    export {};
    
==== /project/c.tsx (0 errors) ====
    export {};
    
==== /project/d/index.ts (0 errors) ====
    export {};
    
==== /project/e (7 errors) ====
    WOMP WOMP BINARY DATA
    ~~~~
!!! error TS1434: Unexpected keyword or identifier.
    ~~~~
!!! error TS2304: Cannot find name 'WOMP'.
         ~~~~
!!! error TS1434: Unexpected keyword or identifier.
         ~~~~
!!! error TS2304: Cannot find name 'WOMP'.
              ~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
              ~~~~~~
!!! error TS2304: Cannot find name 'BINARY'.
                     ~~~~
!!! error TS2304: Cannot find name 'DATA'.
    
==== /project/e.ts (0 errors) ====
    export {};
    
==== /project/e.txt (42 errors) ====
    The letter e is for elephant
    ~~~
!!! error TS1434: Unexpected keyword or identifier.
    ~~~
!!! error TS2304: Cannot find name 'The'.
        ~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
        ~~~~~~
!!! error TS2304: Cannot find name 'letter'.
               ~
!!! error TS1434: Unexpected keyword or identifier.
               ~
!!! error TS2304: Cannot find name 'e'.
                 ~~
!!! error TS2304: Cannot find name 'is'.
                 ~~~
!!! error TS1228: A type predicate is only allowed in return type position for functions and methods.
                        ~~~~~~~~
!!! error TS1005: '(' expected.
                        ~~~~~~~~
!!! error TS2304: Cannot find name 'elephant'.
    This poem is not about elephants
    ~~~~
!!! error TS1005: ';' expected.
    ~~~~
!!! error TS2304: Cannot find name 'This'.
         ~~~~
!!! error TS1005: ';' expected.
         ~~~~
!!! error TS2304: Cannot find name 'poem'.
              ~~
!!! error TS1005: ')' expected.
              ~~
!!! error TS2304: Cannot find name 'is'.
              ~~~
!!! error TS1228: A type predicate is only allowed in return type position for functions and methods.
                 ~~~
!!! error TS1434: Unexpected keyword or identifier.
                 ~~~
!!! error TS2304: Cannot find name 'not'.
                     ~~~~~
!!! error TS1434: Unexpected keyword or identifier.
                     ~~~~~
!!! error TS2304: Cannot find name 'about'.
                           ~~~~~~~~~
!!! error TS2304: Cannot find name 'elephants'.
    It is about the letter e
    ~~
!!! error TS1434: Unexpected keyword or identifier.
    ~~
!!! error TS2304: Cannot find name 'It'.
       ~~
!!! error TS2304: Cannot find name 'is'.
       ~~~
!!! error TS1228: A type predicate is only allowed in return type position for functions and methods.
          ~~~~~
!!! error TS1434: Unexpected keyword or identifier.
          ~~~~~
!!! error TS2304: Cannot find name 'about'.
                ~~~
!!! error TS1434: Unexpected keyword or identifier.
                ~~~
!!! error TS2304: Cannot find name 'the'.
                    ~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
                    ~~~~~~
!!! error TS2304: Cannot find name 'letter'.
                           ~
!!! error TS2304: Cannot find name 'e'.
    - Authored by GitHub Copilot, Nov 2022
      ~~~~~~~~
!!! error TS2304: Cannot find name 'Authored'.
               ~~
!!! error TS1005: ';' expected.
               ~~
!!! error TS2304: Cannot find name 'by'.
                  ~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
                  ~~~~~~
!!! error TS2304: Cannot find name 'GitHub'.
                         ~~~~~~~
!!! error TS2304: Cannot find name 'Copilot'.
                         ~~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                                  ~~~
!!! error TS2304: Cannot find name 'Nov'.
                                      ~~~~
!!! error TS1005: ';' expected.
    
==== /project/e.txt.ts (0 errors) ====
    export {};
    
==== /project/main.ts (0 errors) ====
    import {} from "./a";
    import {} from "./a.js";
    import {} from "./a.ts";
    
    import {} from "./b";
    import {} from "./b.js";
    import {} from "./b.ts";
    import {} from "./b.d.ts";
    import type {} from "./b.d.ts";
    
    import {} from "./c.ts";
    import {} from "./c.tsx";
    
    import {} from "./d";
    import {} from "./d/index";
    import {} from "./d/index.ts";
    
    // These should not resolve, but preventing them has
    // relatively little utility compared to the cost of
    // the filesystem hits.
    import {} from "./e";
    import {} from "./e.txt";
    
==== /project/types.d.ts (0 errors) ====
    import {} from "./a.ts";
    import {} from "./a.d.ts";
    import type {} from "./a.d.ts";